Added edit existing RidePat

--- a/KSmoving System/pages/ridePatForm.html
+++ b/KSmoving System/pages/ridePatForm.html
@@ -533,7 +533,7 @@
                     var status = arr_status[i].Name;
                     $('<option>', { value: status, text: status }).appendTo($select);
                 }
-                if (arr_customer.func = "new") {
+                if (arr_customer.func == "new") {
                     $("#statusRidePat option[value='ממתינה לשיבוץ']").prop('selected', true);
                 }
 
